# CraneVM

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md
include/: functions.hpp
include/reader/: reader.hpp
include/structures/: mem.hpp  opcodes.hpp  stream.hpp
include/writer/: writer.hpp
src/: main.cpp
src/reader/: reader.cpp  stream.cpp
src/structs/: opcodes_funcs.cpp
src/writer/: writer.cpp
tests/: test_opcodes.cpp  test_stream_init.cpp  test_write.cpp
